CSS: Fix #content top-padding on mobile

--- a/css/styles.less
+++ b/css/styles.less
@@ -251,7 +251,7 @@ pre {
     }
 
     #content {
-        padding: 0 20px;
+        padding: 20px;
     }
 }
 
